--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vue-food",
   "version": "1.0.0",
   "description": "A order-food project",
-  "author": "code@6110 <sophiagable@gmail.com>",
+  "author": "sophiagable",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
